# CodeForces_Practice

./: 236A_CodeForces.cpp  266A_CodeForces.cpp  546A_soldiers_and_banana.cpp  67_int_problem.cpp  CMakeLists.txt  README.md
2214_contest_codeforces/: 2214_odd_man.cpp  AND.cpp  Neural_Feud.cpp  alimony.cpp  shortest_path.cpp  simple.cpp  you_are_not_robot.cpp
